# DACL

./: .gitignore  FEEDBACK.md  README.md  events.jsonl  job.md  joke.md
.github/ISSUE_TEMPLATE/: child-task.yml  config.yml  fix-task.yml  parent-epic.yml
.github/workflows/: dashboard-verify.yml  (+1 more)
agent-kernel/: .env.example  CONTEXT.md  README.md  cron-add.sh  cron-remove.sh  run.sh
agents/: registry.json
anchor/: Anchor.toml  Cargo.toml  README.md
anchor/programs/dacl-bootstrap/: Cargo.toml
anchor/programs/dacl-bootstrap/src/: lib.rs
apps/cli/: pyproject.toml
apps/cli/src/forge/: __main__.py  add_agent_dialog.py  add_agent_screen.py  app.py  chat.py  confirm_remove_screen.py  event_feed.py  event_feed.tcss  layout.tcss  llm.py  log_panel.py  status_panel.py  tools.py
apps/cli/src/forge_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
apps/cli/tests/: test_event_feed.py
config/: solana.devnet.example.json
contexts/: CONSTRAINTS.md  HANDOFF.md  IDENTITY.md  JOKES.md  LABELS.md  PLANNER.md  README.md  REVIEWER.md  SUPER.md  WORKER.md
cron/: jobs.json
dashboard/: README.md  package-lock.json  package.json
operatives/: COMMENT_STYLE.md  CRON_PUBLIC.md  ISSUE_PR_PROTOCOL.md  ORCHESTRATOR.md  ORCHESTRATOR_UNSTUCK.md  PLANNER.md  RUN_LOG_TEMPLATE.md  WORKER.md
rust-sdk/dacl-solana-sdk/: Cargo.toml  README.md
rust-sdk/dacl-solana-sdk/src/: lib.rs
scripts/: agent-memory-rollover.sh  agent-runlog.sh  build-cron-prompts.sh  check-agent-identity.sh  check-issue-pr-sync.sh  create-subagent.sh  memory-sync.sh  setup-agent-identity.sh  setup-subagent.sh  solana-bootstrap-devnet.sh  validate-runlog-emission.sh
templates/: README.md  planner.json  super.json  worker.json
(+158 files in other folders)
